--- a/index.qmd
+++ b/index.qmd
@@ -2,6 +2,12 @@
 title: "Übung"
 ---
 
+Aufgrund der aktuellen teschnischen Problemen bei den Informationsdiensten der Universität stellen wir Übungsmaterialien und wichtige Infos für den Kurs *Einführung in die Ökonometrie* kurzfristig über diese Website bereit.
+
+Bei wichtigen fragen wenden Sie sich bitte per Email an [Martin Arnold](mailto:martchriarno@googlemail.com?subject=[EidÖ])
+
+[Link zum Online-Companion](https://www.econometrics-with-r.org/)
+
 ## Übungsblätter
 
 - [Übungsblatt 1](https://github.com/mca91/Eidoe22/raw/main/Blatt-1.pdf)
@@ -16,11 +22,17 @@ title: "Übung"
 - [R-Lösungen Blatt 3](https://github.com/mca91/Eidoe22/raw/main/Blatt-3_R_sol.pdf)
 - [R-Lösungen Blatt 4](https://github.com/mca91/Eidoe22/raw/main/Blatt-4_R_sol.pdf)
 
+## Datensätze
+
+- [CASchools.Rdata](https://github.com/mca91/Eidoe22/raw/main/CASchools.Rdata)
+
 ## Zusatzaufgabe 1
 
-- [Zusatzaufgabe 1](https://github.com/mca91/Eidoe22/raw/main/Assignment1.pdf)
-- [Zusatzaufgabe 1](https://github.com/mca91/Eidoe22/raw/main/stimmung.csv)
+*Mit dieser Zusatzaufgabe können Sie bis zu 2.5 Zusatzpunkte für die Klausur erwerben. Die Zusatzpunkte werden nur bei bestandener Klausur angerechnet. Sie können die Aufgaben in einer Gruppe von bis zu drei Personen bearbeiten. Ihre Lösungen sind bis einschließlich Mittwoch, den 7.12.2022, unter Nennung von Na- men und Matrikelnummer aller Beteiligten als kommentiertes R-Skript per E-Mail einzureichen (siehe Aufgabenblatt).*
 
-## Discord Diskussions- und Nachrichtenforum
+- [Zusatzaufgabe 1](https://github.com/mca91/Eidoe22/raw/main/Assignment1.pdf)
+- [stimmung.csv](https://github.com/mca91/Eidoe22/raw/main/stimmung.csv)
+
+## Discord: Diskussions- und Nachrichtenforum
 
 <iframe src="https://e.widgetbot.io/channels/1046707102984437770/1046707119774236694" height="600" width="100%"></iframe>
