--- a/index.qmd
+++ b/index.qmd
@@ -1,39 +1,18 @@
 ---
-title: "Übung"
+title: "Einführung in die Ökonometrie (WiSe 22)"
+subtitle: "Lehrstuhl für Ökonometrie (UDE)"
 ---
 
-Aufgrund der aktuellen teschnischen Problemen bei den Informationsdiensten der Universität stellen wir Materialien für den Kurs *Einführung in die Ökonometrie* kurzfristig über diese Website bereit. **Bitte beachten Sie, dass sämtlich Emaildienste ebenfalls betroffen sind.** 
+Aufgrund der aktuellen teschnischen Probleme bei den Informationsdiensten der Universität stellen wir Materialien für den Kurs *Einführung in die Ökonometrie* kurzfristig über diese Website bereit. **Bitte beachten Sie, dass sämtlich Emaildienste ebenfalls betroffen sind.** 
 
-**Wichtige Infos kommunizieren wir zusätzlich über unseren Dischord-Server (siehe unten).**
+**Wichtige Infos kommunizieren wir zusätzlich über unseren Dischord-Server (siehe unten).** 
 
-Bei wichtigen Fragen wenden Sie sich bitte per Email an [Martin Arnold](mailto:martchriarno@googlemail.com?subject=[EidÖ])
+## Kontakt
 
-[Link zum Online-Companion](https://www.econometrics-with-r.org/)
+Bei **wichtigen** Fragen wenden Sie sich bitte per Email an uns
 
-## Übungsblätter
-
-- [Übungsblatt 1](https://github.com/mca91/Eidoe22/raw/main/Blatt-1.pdf)
-- [Übungsblatt 2](https://github.com/mca91/Eidoe22/raw/main/Blatt-2.pdf)
-- [Übungsblatt 3](https://github.com/mca91/Eidoe22/raw/main/Blatt-3.pdf)
-- [Übungsblatt 4](https://github.com/mca91/Eidoe22/raw/main/Blatt-4.pdf)
-- [Übungsblatt 5](https://github.com/mca91/Eidoe22/raw/main/Blatt-5.pdf)
-
-## R-Lösungen
-
-- [R-Lösungen Blatt 1](https://github.com/mca91/Eidoe22/raw/main/Blatt-1_R_sol.pdf)
-- [R-Lösungen Blatt 3](https://github.com/mca91/Eidoe22/raw/main/Blatt-3_R_sol.pdf)
-- [R-Lösungen Blatt 4](https://github.com/mca91/Eidoe22/raw/main/Blatt-4_R_sol.pdf)
-
-## Datensätze
-
-- [CASchools.Rdata](https://github.com/mca91/Eidoe22/raw/main/CASchools.Rdata)
-
-## Zusatzaufgabe 1
-
-*Mit dieser Zusatzaufgabe können Sie bis zu 2.5 Zusatzpunkte für die Klausur erwerben. Die Zusatzpunkte werden nur bei bestandener Klausur angerechnet. Sie können die Aufgaben in einer Gruppe von bis zu drei Personen bearbeiten. Ihre Lösungen sind bis einschließlich Mittwoch, den 7.12.2022, unter Nennung von Na- men und Matrikelnummer aller Beteiligten als kommentiertes R-Skript per E-Mail einzureichen (siehe Aufgabenblatt).*
-
-- [Zusatzaufgabe 1](https://github.com/mca91/Eidoe22/raw/main/Assignment1.pdf)
-- [stimmung.csv](https://github.com/mca91/Eidoe22/raw/main/stimmung.csv)
+- [Martin Arnold](mailto:martchriarno@googlemail.com?subject=[EidÖ])
+- [Yannick Hoga](mailto:martchriarno@googlemail.com?subject=[EidÖ])
 
 ## Discord: Diskussions- und Nachrichtenforum
 
