minor text changes

--- a/index.qmd
+++ b/index.qmd
@@ -12,7 +12,7 @@ Aufgrund der aktuellen teschnischen Probleme bei den Informationsdiensten der Un
 Bei **wichtigen** Fragen wenden Sie sich bitte per Email an uns:
 
 - [Martin Arnold](mailto:martchriarno@googlemail.com?subject=[EidÖ])
-- [Yannick Hoga](mailto:martchriarno@googlemail.com?subject=[EidÖ])
+- [Yannick Hoga](mailto:hogayannick@gmail.com?subject=[EidÖ])
 
 ## Discord: Diskussions- und Nachrichtenforum
 
