--- a/uebung.qmd
+++ b/uebung.qmd
@@ -4,7 +4,7 @@ title: "Übung"
 
 Nachfolgend finden Sie Materialien für die Übung. Die Veranstaltung findet -- vorbehaltlich weiterer Entwicklungen -- weiterhin in R11 T08 C98 statt.
 
-Bei wichtigen Fragen bzgl. der Vorlesung wenden Sie sich bitte per Email an [Martin Arnold](mailto:martchriarno@googlemail.com?subject=[EidÖ])
+Bei wichtigen Fragen bzgl. der Vorlesung wenden Sie sich bitte per Email an [Martin Arnold](mailto:martchriarno@googlemail.com?subject=[EidÖ]).
 
 ## Online-Companion (ITER)
 
