--- a/Vorlesung.qmd
+++ b/Vorlesung.qmd
@@ -2,6 +2,8 @@
 title: "Vorlesung"
 ---
 
+Die Vorlesung findet wie gewohnt in S03 V00 E71 statt.
+
 Bei wichtigen Fragen bzgl. der Vorlesung wenden Sie sich bitte per Email an [Yannick Hoga](mailto:hogayannick@gmail.com?subject=[EidÖ]).
 
 - [Skript](https://github.com/mca91/Eidoe22/raw/main/skript.pdf)
