added CH in contact section.

--- a/index.qmd
+++ b/index.qmd
@@ -13,6 +13,7 @@ Bei **wichtigen** Fragen wenden Sie sich bitte per Email an uns:
 
 - [Martin Arnold](mailto:martchriarno@googlemail.com?subject=[EidÖ])
 - [Yannick Hoga](mailto:hogayannick@gmail.com?subject=[EidÖ])
+- [Christoph Hanck](mailto:christoph.hanck@uni-dortmund.de?subject=[EidÖ])
 
 ## Discord: Diskussions- und Nachrichtenforum
 
