added links to UEE chair and fixed some typos

--- a/index.qmd
+++ b/index.qmd
@@ -15,7 +15,7 @@ Bei **wichtigen** Fragen wenden Sie sich bitte per Email an uns:
 - [Yannick Hoga](mailto:hogayannick@gmail.com?subject=[EidÖ])
 - [Christoph Hanck](mailto:christoph.hanck@uni-dortmund.de?subject=[EidÖ])
 
-## Lehrmaterialien zu weiteren
+## Weitere Module
 
 Wir möchten Sie außerdem auf folgende Websites mit Lehrmaterialien zu weiteren Modulen aufmerksam machen:
 
