new deadline for assignment 1

--- a/index.qmd
+++ b/index.qmd
@@ -7,6 +7,9 @@ Aufgrund der aktuellen technischen Probleme bei den Informationsdiensten der Uni
 
 **Bitte beachten Sie, dass sämtliche Emaildienste der Universität ebenfalls betroffen sind. Wichtige Infos kommunizieren wir daher zusätzlich über unseren Discord-Server (siehe unten). Bitte nutzen Sie Discord ausschließlich für Diskussionen rund um die Lehrveranstaltung.** 
 
+
+**<span style=color:#ff9c00;>Bitte beachten Sie, dass die Deadline für Einreichungen zu Zusatzaufgabe 1 aufgrund der aktuellen Situation bis einschließlich 21.12.2022 verlängert wurde!<span/>**
+
 ## Kontakt
 
 Bei **wichtigen** Fragen wenden Sie sich bitte per Email an uns:
