--- a/uebung.qmd
+++ b/uebung.qmd
@@ -31,10 +31,12 @@ Bei wichtigen Fragen bzgl. der Übung wenden Sie sich bitte per Email an [Martin
 
 ## Zusatzaufgabe 1
 
-*Mit dieser Zusatzaufgabe können Sie bis zu 2.5 Zusatzpunkte für die Klausur erwerben. Die Zusatzpunkte werden nur bei bestandener Klausur angerechnet. Sie können die Aufgaben in einer Gruppe von bis zu drei Personen bearbeiten. Ihre Lösungen sind bis einschließlich Mittwoch, den 7.12.2022, unter Nennung von Na- men und Matrikelnummer aller Beteiligten als kommentiertes R-Skript per E-Mail einzureichen (siehe Aufgabenblatt).*
+**<span style=color:#ff9c00;>Bitte beachten Sie, dass die Deadline für Einreichungen zu Zusatzaufgabe 1 aufgrund der aktuellen Situation bis einschließlich 21.12.2022 verlängert wurde!<span/>**
+
+*Mit dieser Zusatzaufgabe können Sie bis zu 2.5 Zusatzpunkte für die Klausur erwerben. Die Zusatzpunkte werden nur bei bestandener Klausur angerechnet. Sie können die Aufgaben in einer Gruppe von bis zu drei Personen bearbeiten. Ihre Lösungen sind bis einschließlich Mittwoch, den 21.12.2022, unter Nennung von Namen und Matrikelnummer aller Beteiligten als kommentiertes R-Skript per E-Mail an [Martin Arnold](mailto:martchriarno@googlemail.com?subject=[EidÖ]) einzureichen.*
 
 - [Zusatzaufgabe 1](https://github.com/mca91/Eidoe22/raw/main/Assignment1.pdf)
-- <a href="https://github.com/mca91/Eidoe22/raw/main/stimmung.csv" download>stimmung.csv</a> (Rechtsklick -> Ziel/Datei speichern als/unter, falls sich kein download öffnet)
+- <a href="https://github.com/mca91/Eidoe22/raw/main/stimmung.csv" download>stimmung.csv</a> (Rechtsklick &#8594; Ziel/Datei speichern als/unter, falls sich kein download öffnet)
 
 
 ## Optionales Kursangebot bei DataCamp
