--- a/uebung.qmd
+++ b/uebung.qmd
@@ -17,6 +17,7 @@ Bei wichtigen Fragen bzgl. der Übung wenden Sie sich bitte per Email an [Martin
 - [Übungsblatt 3](https://github.com/mca91/Eidoe22/raw/main/Blatt-3.pdf)
 - [Übungsblatt 4](https://github.com/mca91/Eidoe22/raw/main/Blatt-4.pdf)
 - [Übungsblatt 5](https://github.com/mca91/Eidoe22/raw/main/Blatt-5.pdf)
+- [Übungsblatt 5](https://github.com/mca91/Eidoe22/raw/main/Blatt-6.pdf)
 
 ## R-Lösungen
 
@@ -25,9 +26,16 @@ Bei wichtigen Fragen bzgl. der Übung wenden Sie sich bitte per Email an [Martin
 - [R-Lösungen Blatt 3](https://github.com/mca91/Eidoe22/raw/main/Blatt-3_R_sol.pdf)
 - [R-Lösungen Blatt 4](https://github.com/mca91/Eidoe22/raw/main/Blatt-4_R_sol.pdf)
 
+## Sonstige Lösungen
+
+- [Blatt 4 A4](https://github.com/mca91/Eidoe22/raw/main/Blatt-4-A4.pdf)
+
 ## Datensätze
 
 - [CASchools.Rdata](https://github.com/mca91/Eidoe22/raw/main/CASchools.Rdata)
+- [br.dat](https://github.com/mca91/Eidoe22/raw/main/br.dat)
+- [br.def](https://github.com/mca91/Eidoe22/raw/main/br.def)
+- [Boston](https://github.com/mca91/Eidoe22/raw/main/Boston.Rdata)
 
 ## Zusatzaufgabe 1
 
