--- a/uebung.qmd
+++ b/uebung.qmd
@@ -18,6 +18,7 @@ Bei wichtigen Fragen bzgl. der Übung wenden Sie sich bitte per Email an [Martin
 - [Übungsblatt 4](https://github.com/mca91/Eidoe22/raw/main/Blatt-4.pdf)
 - [Übungsblatt 5](https://github.com/mca91/Eidoe22/raw/main/Blatt-5.pdf)
 - [Übungsblatt 6](https://github.com/mca91/Eidoe22/raw/main/Blatt-6.pdf)
+- [Übungsblatt 7](https://github.com/mca91/Eidoe22/raw/main/Blatt-7.pdf)
 
 ## R-Lösungen
 
@@ -25,6 +26,10 @@ Bei wichtigen Fragen bzgl. der Übung wenden Sie sich bitte per Email an [Martin
 - [R-Lösungen Blatt 1](https://github.com/mca91/Eidoe22/raw/main/Blatt-1_R_sol.pdf)
 - [R-Lösungen Blatt 3](https://github.com/mca91/Eidoe22/raw/main/Blatt-3_R_sol.pdf)
 - [R-Lösungen Blatt 4](https://github.com/mca91/Eidoe22/raw/main/Blatt-4_R_sol.pdf)
+
+### R-Pakete
+
+[Hinweise zur Installation von R-Paketen](https://github.com/mca91/Eidoe22/raw/main/R-Pakete.pdf)
 
 ## Sonstige Lösungen
 
