--- a/uebung.qmd
+++ b/uebung.qmd
@@ -53,6 +53,8 @@ Bei wichtigen Fragen bzgl. der Übung wenden Sie sich bitte per Email an [Martin
 - [Zusatzaufgabe 1](https://github.com/mca91/Eidoe22/raw/main/Assignment1.pdf)
 - <a href="https://github.com/mca91/Eidoe22/raw/main/stimmung.csv" download>stimmung.csv</a> (Rechtsklick &#8594; Ziel/Datei speichern als/unter, falls sich kein Download öffnet)
 
+- [Lösungsvorschlag Zusatzaufgabe 1](https://github.com/mca91/Eidoe22/raw/main/Assignment1_sol.pdf)
+
 ### Zusatzaufgabe 2
 
 *Mit dieser Zusatzaufgabe können Sie bis zu 2.5 Zusatzpunkte für die Klausur erwerben. Die <u>Zusatzpunkte werden nur bei bestandener Klausur angerechnet</u>. Sie können die Aufgaben in einer Gruppe von bis zu drei Personen bearbeiten. Ihre Lösungen sind bis einschließlich Mittwoch, den 13.01.2023, unter Nennung von Namen und Matrikelnummer aller Beteiligten als kommentiertes R-Skript per E-Mail an [Martin Arnold](mailto:martchriarno@googlemail.com?subject=[EidÖ]) einzureichen.*
